--- a/src/content/blog/frosti-mdx.mdx
+++ b/src/content/blog/frosti-mdx.mdx
@@ -13,7 +13,7 @@ tags:
 ---
 
 import Collapse from "../../components/mdx/Collapse.astro";
-import Diff from "../../components/mdx/Diff.astro";
+import Diff from "../../components/mdx/Digff.astro";
 import Error from "../../components/mdx/Error.astro";
 import Info from "../../components/mdx/Info.astro";
 import Kbd from "../../components/mdx/Kbd.astro";
@@ -30,7 +30,7 @@ This article describes how to use the components provided by Frosti in `mdx` to 
 
 ### Getting started
 
-First you need to create an `mdx` file, which is as simple as changing the extension to `.mdx`.
+First you need to create an `mdx` file, which is as simple as changing the extension to `.mdx`. GOT✔
 
 ### Introducing
 
@@ -53,7 +53,7 @@ import LinkCard from "../../components/mdx/LinkCard.astro";
 #### Collapse
 
 <Collapse title="This is an example text.">
-  This is the hidden content!
+  This is the hidden content! see i m here.
 </Collapse>
 
 ```astro
