--- a/src/content/blog/frosti-mdx.mdx
+++ b/src/content/blog/frosti-mdx.mdx
@@ -13,7 +13,7 @@ tags:
 ---
 
 import Collapse from "../../components/mdx/Collapse.astro";
-import Diff from "../../components/mdx/Digff.astro";
+import Diff from "../../components/mdx/Diff.astro";
 import Error from "../../components/mdx/Error.astro";
 import Info from "../../components/mdx/Info.astro";
 import Kbd from "../../components/mdx/Kbd.astro";
