--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -1,7 +1,7 @@
 ---
 title: "关于游戏与第九艺术"
 description: "一些思考"
-pubDate: "23 03 2025"
+pubDate: "Mar 23 2025"
 image: /image/image5.jpg
 categories:
   - life
