--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -1,6 +1,6 @@
 ---
 title: "关于游戏与第九艺术"
-description: "一些思考"
+description: "深夜的一些思考"
 pubDate: "Mar 23 2025"
 image: /image/image5.jpg
 categories:
@@ -11,6 +11,7 @@ tags:
   - life
   - game
   - art 
+  - moon
 ---
 
 
