--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -37,8 +37,8 @@ tags:
 
 《底特律·变人》思考AI与人的关系，《赛博朋克2077》思考未来社会的走向，《荒野大镖客2》思考救赎的意义，《行尸走肉》思考末日时人与人的关系。这样的思考不会和思考“今晚的月亮圆不圆”一样轻松愉快，但会让贫瘠的心灵被浇灌，不至于麻木；让生活有点乐趣，不那么无聊。思考很重要。
 
-**Je pense, donc je suis.  
-I think, therefore I am.**
+> **Je pense, donc je suis.  
+> I think, therefore I am.**
 
 ---
 
@@ -58,7 +58,7 @@ I think, therefore I am.**
 
 愿人们真诚相待。
 
-**给岁月以文明，而不是给文明以岁月。**
+> **给岁月以文明，而不是给文明以岁月。**
 
 ---
 
@@ -68,13 +68,13 @@ I think, therefore I am.**
 
 我很喜欢坂本龙一先生创作的纯音乐，他的和平事业也很令我敬佩。教授是二三年因癌症而逝世，他留下这样一句话：
 
-**Ars longa, vita brevis.  
-Art is long, life is short.  
-人生朝露，艺术千秋。**
-
----
+> **Ars longa, vita brevis.  
+> Art is long, life is short.  
+> 人生朝露，艺术千秋。**
 
 _--created at 03:19 23/3 2025_
+
+---
 
 这篇随笔过于理想和严肃。当时因为制作游戏，没安排好时间忙得晕头转向，开发完游戏后开始放松，玩《行尸走肉》，然后深夜思考人生的意义，于是有了这篇随笔。现在回看，作为第一篇blog，倒是还蛮特别的。
 
