--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -44,7 +44,12 @@ tags:
 
 最近在玩《行尸走肉》，虽然感觉这游戏有时会为了剧情而剧情，但也确实能带来一些思考。道德或生存只能二选一的情况可能确实少之又少，但如果末日真的到来呢？生死面前，人性会走向哪里？孩子和成年男子都被丧尸抓住了你会先救谁？为了孩子，你会不会拿走别人需要的补给品？拿了有正当理由——孩子需要，但如果孩子不希望你拿呢？
 
-这游戏的有趣之处在这里，很多选择不是非黑即白的，但没有一处是不围绕人性展开的。一位先生曾指正我：要注重善意的出发点所带来的结果。当Lee（主角）告诉Clementine（小孩）杀戮是错误的同时，Clementine可能也会因此丧生。
+这游戏的有趣之处在这里，很多选择不是非黑即白的，但没有一处是不围绕人性展开的。一位先生曾指正我：
+
+> 要注重善意的出发点所带来的结果。
+
+
+当Lee（主角）告诉Clementine（小孩）杀戮是错误的同时，Clementine可能也会因此丧生。
 
 最近让我感动的剧情有三个点：  
 
