--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -1,6 +1,6 @@
 ---
 title: "关于游戏与第九艺术"
-description: "深夜的一些思考"
+description: "第一篇blog，深夜的一些思考"
 pubDate: "Mar 23 2025"
 image: /image/image5.jpg
 categories:
@@ -11,6 +11,8 @@ tags:
   - game
   - art 
   - moon
+badge:
+  - pin
 ---
 
 
