--- a/src/content/blog/清明前一天.mdx
+++ b/src/content/blog/清明前一天.mdx
@@ -10,9 +10,11 @@ tags:
   - life
   - Football
   - moon
+badge:
+  - pin
 ---
 
-# 丢手机，踢球⚽️，品茶🍵，踢球⚽️，看月亮🌙，系统，看月亮🌙
+# Carpe diem,Seize the day
 
 ## 丢手机
 记录一下第一次把手机丢了。课上到一半逃出去吃了顿麦当劳，回来继续上完课，想着上完课就润去换球衣球裤。结果太急了把手机落在教室里了。回去的时候发现教室锁了，还以为要四天后才能拿到手机...  
