--- a/src/content/blog/清明前一天.mdx
+++ b/src/content/blog/清明前一天.mdx
@@ -14,6 +14,8 @@ badge:
   - pin
 ---
 
+import Collapse from "../../components/mdx/Collapse.astro";
+
 # Carpe diem,Seize the day
 
 ## 丢手机
@@ -90,7 +92,7 @@ badge:
 
 jyy nb！  
 
-两三个小时，细看了introduction部分，就学到了很多知识。  
+两三个小时，细看了introduction部分，就学到了很多。  
 
 
 <div style={{ textAlign: 'center' }}>
@@ -100,16 +102,18 @@ jyy nb！
 ## 看月亮🌙
 累了，回宿舍见亲爱的zf了。
 
-## 不愉快
-思来想去还是写一写吧，不愉快的事情也是生活的一部分。  
+## unpleasant things
+<Collapse title="思来想去还是写一写吧，不愉快的事情也是生活的一部分.">
+  还是觉得DM课程的矛盾始于语言的误解，主观的偏见以及最重要的一开始的习以为常的沉默。  
 
-还是觉得DM课程的矛盾始于语言的误解，偏见以及最重要的一开始对权威的盲从。  
+  如果问题早几天被提出，或许矛盾就不会发生。  
 
-如果问题早几天被提出，或许矛盾就不会发生。  
+  个人感觉部分责任在我，虽然很小，但还是有。  
 
-个人感觉部分责任在我，虽然很小，但还是有。  
+  不能要求自己未卜先知，但希望下次能大胆一点，勇敢一点。
+</Collapse>
 
-不能要求自己未卜先知，但希望下次能大胆一点，勇敢一点。
+
 
 
 
