--- a/src/content/blog/DDL.mdx
+++ b/src/content/blog/DDL.mdx
@@ -15,7 +15,9 @@ draft: true
 
 ## 待完成任务
 
-- [ ] 任务 1：学高数
+- [ ] 任务 1：学高数 本周作业：习题7-9: 1,3,4
+        总习题七: 2, 4, 6, 8, 10, 12
+        二重积分直角坐标计算
 - [ ] 任务 2：刷英语竞赛真题
 - [ ] 任务 3：复习高代
 
