--- a/src/content/blog/清明前一天.mdx
+++ b/src/content/blog/清明前一天.mdx
@@ -10,8 +10,7 @@ tags:
   - life
   - Football
   - moon
-badge:
-  - pin
+badge: Pin
 ---
 
 import Collapse from "../../components/mdx/Collapse.astro";
@@ -41,7 +40,7 @@ import Collapse from "../../components/mdx/Collapse.astro";
 
 感觉怪自豪的，最后也不知道那个老师是不是福建的hhhh。  
 
-喝了绿茶，铁观音，好喝，很香，没像家里的苦苦的。接着喝了正宗的奶茶，也是涨见识了。最后蹭了那边的糕点，是真好吃啊，忘问哪买的了呜。  
+喝了绿茶，铁观音，好喝，很香，没像家里的苦苦的。接着喝了正宗的奶茶，不是很甜，口感不腻，带有普洱茶的香气。最后蹭了那边的糕点，是真好吃啊，忘问哪买的了呜。  
 
 <div style={{ textAlign: 'center' }}>
   <img src="/image/drama/2.jpg" alt="tea" style={{ display: 'inline-block' }} />
