--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -1,6 +1,6 @@
 ---
 title: "关于游戏与第九艺术"
-description: "第一篇blog，深夜的一些思考"
+description: "My first blog，about game and art."
 pubDate: "Mar 23 2025"
 image: /image/image5.jpg
 categories:
@@ -16,8 +16,6 @@ badge: Pin
 
 
 # Ars longa, vita brevis
-
-为比赛奖项发电和为爱发电是两回事，做游戏和玩游戏也是两回事。前者可能只带给我几张机电楼夜晚月亮的照片和一点学习能力的提升；但后者或许能带来更多。
 
 ---
 <div style={{ textAlign: 'center' }}>
@@ -70,7 +68,7 @@ badge: Pin
 
 感谢两星期游戏制作的忙碌，虽使我疲惫，但也让我开始进行思考。
 
-加入806游戏组之后有时会感到迷茫，做的是不想做的游戏，打的是毫无营养的比赛。但另一方面也让更我由衷佩服那些游戏制作者，他们是为爱发电，是为创作给人们带来思考的作品而发电，而不单单是为了盈利；他们是在创造艺术品，而不是工业垃圾。这种作品精神，激励着我走下去，无论最后是否走游戏创作这条路。
+加入806游戏组之后有时会感到迷茫，~~做的是不想做的游戏，打的是毫无营养的比赛。~~但另一方面也让更我由衷佩服那些游戏制作者，他们是为爱发电，是为创作给人们带来思考的作品而发电，而不单单是为了盈利；他们是在创造艺术品，而不是工业垃圾。这种作品精神，激励着我走下去，无论最后是否走游戏创作这条路。
 
 我很喜欢坂本龙一先生创作的纯音乐，他的和平事业也很令我敬佩。教授是二三年因癌症而逝世，他留下这样一句话：
 
@@ -78,10 +76,10 @@ badge: Pin
 > Art is long, life is short.  
 > 人生朝露，艺术千秋。**
 
-_--created at 03:19 23/3 2025_
+_--Created at 03:19 23/3 2025_
 
 ---
 
-这篇随笔过于理想和严肃。当时因为制作游戏，没安排好时间忙得晕头转向，开发完游戏后开始放松，玩《行尸走肉》，然后深夜思考人生的意义，于是有了这篇随笔。现在回看，作为第一篇blog，倒是还蛮特别的。
+这篇随笔有点理想化了。当时因为制作游戏，没安排好时间忙得晕头转向。开发完游戏后突然轻松了不少，一晚上通关了《The Walking Dead》的Season1，进而深夜思考人生的意义。于是有了这篇随笔。现在回看，作为第一篇blog，倒是还蛮特别的。
 
 _--Commented at 22:19 2/4 2025_
