--- a/src/content/blog/清明前一天.mdx
+++ b/src/content/blog/清明前一天.mdx
@@ -23,23 +23,23 @@ import Collapse from "../../components/mdx/Collapse.astro";
 
 幸好有我亲爱的zf帮我把手机拿了。  
 
-好笑。
+Lucky me! 
 
 ## 踢球1⚽️
 和小伙伴们踢球，发现体能还是太差了。最后教练说练体能，变速跑，跑了五圈，尊嘟跑不动。  
 
-好废。  
+www好废。  
 
 
 ## 品茶🍵
-7斋后勤办的活动。一共五个人，手速快报上了。感觉还蛮有趣的。原来我们福建真的是个茶叶大省啊，听到那个老师说了好几次：  
+7斋后勤办的活动。一共五个人，手速快报上了。感觉还蛮有趣的。原来我们福建真的是个茶叶大省，听到那个老师说了好几次：  
 
 
-> xxx茶叶是我们福建的特有的
+> xxx茶叶是*我们*福建的特有的
 
-感觉怪自豪的，最后也不知道那个老师是不是福建的hhhh。  
+感觉怪自豪的，但最后也不知道老师是不是福建人。  
 
-喝了绿茶，铁观音，好喝，很香，没像家里的苦苦的。接着喝了正宗的奶茶，不是很甜，口感不腻，带有普洱茶的香气。最后蹭了那边的糕点，是真好吃啊，忘问哪买的了呜。  
+喝了绿茶，铁观音，好喝，很香，是春天的香味，没像家里的苦苦的。接着喝了正宗的奶茶，不是很甜，口感不腻，有普洱茶的香气。最后蹭了那边的糕点，是真好吃啊，忘问哪买的了呜。  
 
 <div style={{ textAlign: 'center' }}>
   <img src="/image/drama/2.jpg" alt="tea" style={{ display: 'inline-block' }} />
@@ -62,11 +62,11 @@ import Collapse from "../../components/mdx/Collapse.astro";
 
 被小男生们吓晕了(现在一个个的初中生都这么高了吗)  
 
-他们踢的挺好的。就是踢球的时候叽叽喳喳骂来骂去的哈哈哈哈哈，这就是初中生吗。  
+他们踢的挺好的。就是踢球的时候叽叽喳喳骂来骂去的哈哈哈哈哈
 
-好有活力。  
+这就是初中生吗。  
 
-八九点钟的太阳。  
+好有活力。 八九点钟的太阳。  
 
 开始怀念初中生活了。  
 
@@ -74,6 +74,7 @@ import Collapse from "../../components/mdx/Collapse.astro";
   <img src="/image/drama/5.jpg" alt="球场" style={{ display: 'inline-block' }} />
 </div>
 
+想到一句话：
 > 人不能同时拥有青春，和对青春的感受。
 
 ## 看月亮🌙
@@ -91,7 +92,6 @@ import Collapse from "../../components/mdx/Collapse.astro";
 jyy nb！  
 
 两三个小时，细看了introduction部分，就学到了很多。  
-
 
 <div style={{ textAlign: 'center' }}>
   <img src="/image/drama/1.jpg" alt="绿导师yyds" style={{ display: 'inline-block' }} />
