--- a/src/content/blog/关于自由学习.mdx
+++ b/src/content/blog/关于自由学习.mdx
@@ -2,7 +2,7 @@
 title: "关于水课与自由学习"
 description: "某节水课上写的一篇随笔，
   也算是对自由学习的一点想法吧。"
-pubDate: "Apr 3 2025"
+pubDate: "Apr 2 2025"
 image: /image/250402/3.jpg
 categories:
   - life
@@ -29,10 +29,11 @@ tags:
 
 ---
 
-想起上个学期的桀骜，因为很多专业课没点名（比如高数、程设），这些课逃了大半；但水课因为点名，没有逃过几节课；而我收获了很多课余时间，用来学习感兴趣的东西，打游戏，睡觉等等；还收获了不理想但还行的 rk……
+想起上个学期的桀骜，因为很多专业课没点名（比如高数、程设），这些课逃了大半；但水课因为点名，没有逃过几节课；而我收获了很多课余时间，用来踢球，学习感兴趣的东西，打游戏，睡觉等等；还收获了不理想但还行的 rk……
 
-或许是因为这个学期的课都点名而我没那么勇了，也或许是因为我的 rk，这学期还没逃过几节课。
+或许是因为这个学期的课都点名，而我没那么勇了，也或许是因为我开始很在意rk。总之，好久没有逃过课了。
 
 很感慨于上学期的自由，故写下了这篇随笔。
 
 ---
+
