--- a/src/content/blog/博客搭建帮助.mdx
+++ b/src/content/blog/博客搭建帮助.mdx
@@ -9,6 +9,9 @@ tags:
   - Blog
 badge: Pin
 ---
+
+import LinkCard from "../../components/mdx/LinkCard.astro";
+
 # blog搭建帮助
 使用主题：*Frosti*
 <LinkCard
