--- a/src/content/blog/博客搭建帮助.mdx
+++ b/src/content/blog/博客搭建帮助.mdx
@@ -1,13 +1,12 @@
 ---
 title: blog搭建帮助
 description: astro
-pubDate: 01 4 2025
+pubDate: 04 7 2025
 categories:
   - tech
 tags:
   - Frosti
   - Blog
-badge: Pin
 ---
 
 import LinkCard from "../../components/mdx/LinkCard.astro";
@@ -30,6 +29,6 @@ import LinkCard from "../../components/mdx/LinkCard.astro";
 
 评论系统Waline教程([waline](https://waline.js.org/guide/get-started/server.html))
 
-这里感谢SunMaple以及他制作的blog主题Frosti，他的([博客](www.saroprock.com))很有生命力，也给了我很多启发，比如index的签名。
+这里感谢SunMaple以及他制作的blog主题Frosti，他的([博客](www.saroprock.com))很有生命力，也给了我很多启发。
 
 
