--- a/src/content/blog/博客搭建帮助.mdx
+++ b/src/content/blog/博客搭建帮助.mdx
@@ -29,6 +29,6 @@ import LinkCard from "../../components/mdx/LinkCard.astro";
 
 评论系统Waline教程([waline](https://waline.js.org/guide/get-started/server.html))
 
-这里感谢SunMaple以及他制作的blog主题Frosti，他的([博客](www.saroprock.com))很有生命力，也给了我很多启发。
+这里感谢SunMaple以及他制作的blog主题Frosti，他的([blog](https://www.saroprock.com/))很有生命力，也给了我很多启发。
 
 
