--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -68,7 +68,7 @@ badge: Pin
 
 感谢两星期游戏制作的忙碌，虽使我疲惫，但也让我开始进行思考。
 
-加入806游戏组之后有时会感到迷茫，~~做的是不想做的游戏，打的是毫无营养的比赛。~~但另一方面也让更我由衷佩服那些游戏制作者，他们是为爱发电，是为创作给人们带来思考的作品而发电，而不单单是为了盈利；他们是在创造艺术品，而不是工业垃圾。这种作品精神，激励着我走下去，无论最后是否走游戏创作这条路。
+加入806游戏组之后有时会感到迷茫，<s>做的是不想做的游戏，打的是毫无营养的比赛</s>。但另一方面也让更我由衷佩服那些游戏制作者，他们是为爱发电，是为创作给人们带来思考的作品而发电，而不单单是为了盈利；他们是在创造艺术品，而不是工业垃圾。这种作品精神，激励着我走下去，无论最后是否走游戏创作这条路。
 
 我很喜欢坂本龙一先生创作的纯音乐，他的和平事业也很令我敬佩。教授是二三年因癌症而逝世，他留下这样一句话：
 
