--- a/src/content/blog/记梦.mdx
+++ b/src/content/blog/记梦.mdx
@@ -30,6 +30,12 @@ tags:
 
 珍惜每一天吧。
 
+<div style={{ textAlign: 'center' }}>
+  <img src="/image/250402/5.jpg" alt="moon" style={{ display: 'inline-block' }} />
+</div>
+<div style={{ textAlign: 'center' }}>
+  <img src="/image/250402/6.jpg" alt="sky" style={{ display: 'inline-block' }} />
+</div>
 Carpe Diem，Seize the day.
 
 
