--- a/src/content/blog/清明前一天.mdx
+++ b/src/content/blog/清明前一天.mdx
@@ -100,7 +100,7 @@ jyy nb！
 ## 看月亮🌙
 累了，回宿舍见亲爱的zf了。
 
-## unpleasant things
+## unpleasant thing
 <Collapse title="思来想去还是写一写吧，不愉快的事情也是生活的一部分.">
   还是觉得DM课程的矛盾始于语言的误解，主观的偏见以及最重要的一开始的习以为常的沉默。  
 
