--- a/src/content/blog/关于游戏与第九艺术.mdx
+++ b/src/content/blog/关于游戏与第九艺术.mdx
@@ -80,6 +80,7 @@ _--Created at 03:19 23/3 2025_
 
 ---
 
-这篇随笔有点理想化了。当时因为制作游戏，没安排好时间忙得晕头转向。开发完游戏后突然轻松了不少，一晚上通关了《The Walking Dead》的Season1，进而深夜思考人生的意义。于是有了这篇随笔。现在回看，作为第一篇blog，倒是还蛮特别的。
+这篇随笔有点理想化了。当时因为制作游戏，没安排好时间忙得晕头转向。开发完游戏后突然轻松了不少，一晚上通关了《The Walking Dead》的Season1，有点感悟。于是有了这篇随笔。现在回看，作为第一篇blog，倒是还蛮特别的。
 
 _--Commented at 22:19 2/4 2025_
+
