--- a/src/content/blog/Uni-app.mdx
+++ b/src/content/blog/Uni-app.mdx
@@ -15,5 +15,13 @@ draft: true
 👉 [官网](https://uniapp.dcloud.net.cn/)
 ## 了解结构
 
-
+```
+src/
+  ├── pages/          # 页面文件
+  ├── static/         # 静态资源
+  ├── App.vue         # 应用配置
+  ├── main.js         # 入口文件
+  ├── manifest.json   # 应用配置
+  └── pages.json      # 页面路由配置
+```
 
