--- a/src/content/blog/PA1.mdx
+++ b/src/content/blog/PA1.mdx
@@ -1,7 +1,7 @@
 ---
 title: PA1
 description: PA1学习笔记
-pubDate: 19 7 2025
+pubDate: 07 19 2025
 image: /image/drama/1.jpg
 categories:
   - tech
@@ -43,4 +43,4 @@ Instruction Set Architecture **指令集架构**
 .config 生成(CONFIG_X86=y)
 conf生成：
 autoconf.h  控制哪些源代码被编译
-auto.conf    控制哪些文件参与编译（控制Makefile的源文件和变量)
+auto.conf    控制哪些文件参与编译（控制Makefile的源文件和变量）
